--- a/design.html
+++ b/design.html
@@ -23,7 +23,7 @@
   <!-- Custom JavaScript -->
   <script defer src="phantom.js"></script>
 
-  <title>DESIGNS PAGE</title>
+  <title>PHANTOM</title>
 </head>
 
 <body>
