--- a/bookings.html
+++ b/bookings.html
@@ -19,7 +19,7 @@
 
   <!-- Styles -->
   <link rel="stylesheet" href="phantom.css" />
-  <title>Booking Page</title>
+  <title>PHANTOM</title>
 </head>
 
 <body class="bookings">
