--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <div class="bottom-bar">
             <div class="bottom-bar__content">
-                <a href="INDEX.html" class="logo">
+                <a href="index.html" class="logo">
                     <img class="logo__img" src="images/phantom.svg" alt="logo">
                     <span class="logo__text">PHANTOM</span>
                 </a>
