--- a/design.html
+++ b/design.html
@@ -52,10 +52,11 @@
 
         <nav class="nav">
           <ul class="nav__list">
-            <li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
-            <li class="nav__item"><a href="history.html" class="nav__link">History</a></li>
-            <li class="nav__item"><a href="bookings.html" class="nav__link">Bookings</a></li>
-            <li class="nav__item"><a href="design.html" class="btn">Designs</a></li>
+                <li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
+                <li class="nav__item"><a href="history.html" class="nav__link">History</a></li>
+                <li class="nav__item"><a href="bookings.html" class="nav__link">Bookings</a></li>
+                <li class="nav__item"><a href="contact.html" class="nav__link">Contact</a></li>
+                <li class="nav__item"><a href="design.html" class="btn">Designs</a></li>
           </ul>
         </nav>
 
