--- a/contact.html
+++ b/contact.html
@@ -46,11 +46,11 @@
 
         <nav class="nav">
           <ul class="nav__list">
-                <li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
-                <li class="nav__item"><a href="history.html" class="nav__link">History</a></li>
-                <li class="nav__item"><a href="bookings.html" class="nav__link">Bookings</a></li>
-                <li class="nav__item"><a href="contact.html" class="nav__link">Contact</a></li>
-                <li class="nav__item"><a href="design.html" class="btn">Designs</a></li>
+            <li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
+            <li class="nav__item"><a href="history.html" class="nav__link">History</a></li>
+            <li class="nav__item"><a href="bookings.html" class="nav__link">Bookings</a></li>
+            <li class="nav__item"><a href="contact.html" class="nav__link">Contacts</a></li>
+            <li class="nav__item"><a href="design.html" class="btn">Designs</a></li>
           </ul>
         </nav>
 
@@ -177,7 +177,7 @@
         <div class="sigil-divider"></div>
         <div class="map-wrapper">
           <!-- Embedded Google Map -->
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3608.963258880921!2d55.13899731501099!3d25.23575898387889!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5f43348a67e24b%3A0xff45e502e1ceb7e2!2sJBR%2C%20Dubai!5e0!3m2!1sen!2sae!4v1620000000000!5m2!1sen!2sae" 
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2652.331043729159!2d55.14547302675721!3d25.08614052114663!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5f6def74fdc141%3A0x637e81e5cd94ac79!2sJumeirah%20Living%20Marina%20Gate!5e1!3m2!1sen!2sae!4v1747640488604!5m2!1sen!2sae" 
                   width="100%" 
                   height="450" 
                   style="border:0;" 
@@ -193,7 +193,7 @@
       <div class="footer__content">
         <div class="footer__section">
           <h3>PHANTOM</h3>
-          <p>Phantom Soul Tattoo Studio<br>JBR, Dubai</p>
+          <p>Phantom Soul Tattoo Studio<br>Jumeirah, Dubai</p>
         </div>
         <div class="footer__section">
           <h3>Hours</h3>
