--- a/bookings.html
+++ b/bookings.html
@@ -19,7 +19,7 @@
 
   <!-- Styles -->
   <link rel="stylesheet" href="phantom.css" />
-  <title>PHANTOM</title>
+  <title>Booking Page</title>
 </head>
 
 <body class="bookings">
@@ -46,11 +46,11 @@
 
         <nav class="nav">
           <ul class="nav__list">
-                <li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
-                <li class="nav__item"><a href="history.html" class="nav__link">History</a></li>
-                <li class="nav__item"><a href="bookings.html" class="nav__link">Bookings</a></li>
-                <li class="nav__item"><a href="contact.html" class="nav__link">Contact</a></li>
-                <li class="nav__item"><a href="design.html" class="btn">Designs</a></li>
+            <li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
+            <li class="nav__item"><a href="history.html" class="nav__link">History</a></li>
+            <li class="nav__item"><a href="bookings.html" class="nav__link">Bookings</a></li>
+            <li class="nav__item"><a href="contact.html" class="nav__link">Contacts</a></li>
+            <li class="nav__item"><a href="design.html" class="btn">Designs</a></li>
           </ul>
         </nav>
 
@@ -94,7 +94,7 @@
               <div class="footer__content">
                   <div class="footer__section">
                       <h3>PHANTOM</h3>
-                      <p>Phantom Soul Tattoo Studio<br>JBR, Dubai</p>
+                      <p>Phantom Soul Tattoo Studio<br>Jumeirah, Dubai</p>
                   </div>
                   <div class="footer__section">
                       <h3>Hours</h3>
