--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PHANTOM</title>
+    <title>PHANTOM | Temple of Dark Art</title>
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -37,7 +37,7 @@
 
         <div class="bottom-bar">
             <div class="bottom-bar__content">
-                <a href="index.html" class="logo">
+                <a href="INDEX.html" class="logo">
                     <img class="logo__img" src="images/phantom.svg" alt="logo">
                     <span class="logo__text">PHANTOM</span>
                 </a>
@@ -47,7 +47,7 @@
                         <li class="nav__item"><a href="index.html" class="nav__link">Home</a></li>
                         <li class="nav__item"><a href="history.html" class="nav__link">History</a></li>
                         <li class="nav__item"><a href="bookings.html" class="nav__link">Bookings</a></li>
-                        <li class="nav__item"><a href="contact.html" class="nav__link">Contact</a></li>
+                        <li class="nav__item"><a href="contact.html" class="nav__link">Contacts</a></li>
                         <li class="nav__item"><a href="design.html" class="btn">Designs</a></li>
                     </ul>
                 </nav>
@@ -199,7 +199,7 @@
                     <div class="timeline-year">2025</div>
                     <div class="timeline-content">
                         <h3>THE BIRTH</h3>
-                        <p>Phantom opened its doors in a converted industrial space in JBR. The walls were hand-painted with occult symbols.</p>
+                        <p>Phantom opened its doors in a converted industrial space in Jumeirah. The walls were hand-painted with occult symbols.</p>
                         <div class="timeline-sigil">‡</div>
                     </div>
                 </div>
@@ -224,7 +224,7 @@
             <div class="footer__content">
                 <div class="footer__section">
                     <h3>PHANTOM</h3>
-                    <p>Phantom Soul Tattoo Studio<br>JBR, Dubai</p>
+                    <p>Phantom Soul Tattoo Studio<br>Jumeirah, Dubai</p>
                 </div>
                 <div class="footer__section">
                     <h3>Hours</h3>
